--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ form{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 10px;
     padding: 15px;
-    border-radius: 5px;
+    
 }
-form input{
-    border-radius: 5px;
+* {
+    border-radius: 3px;
 }
 input{
     width: 100%;
